--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "framer-motion": "^6.3.11",
     "lodash.debounce": "^4.0.8",
     "qs": "^6.10.5",
     "react": "^18.1.0",
