--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-pizza",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://vegvisir46.github.io/pizza_shop/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.4",
@@ -15,6 +16,7 @@
     "ahooks": "^3.5.0",
     "axios": "^0.27.2",
     "framer-motion": "^6.3.11",
+    "gh-pages": "^4.0.0",
     "lodash.debounce": "^4.0.8",
     "qs": "^6.10.5",
     "react": "^18.1.0",
@@ -32,7 +34,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
